tests/negative/neg_imported_inout_double_move.safe
-- Expected: REJECT double_move
with provider_Imported_Call_Ownership;

package neg_Imported_Inout_Double_Move

   function run
      Owner : provider_Imported_Call_Ownership.payload_Ptr = new ((value = 5) as provider_Imported_Call_Ownership.payload);

      provider_Imported_Call_Ownership.consume (Owner);
      provider_Imported_Call_Ownership.consume (Owner);

